--- a/server/pom.xml
+++ b/server/pom.xml
@@ -41,7 +41,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>5.3.20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+      		<artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.7.0</version>
         </dependency>
     </dependencies>
 
